test fix WIP 2